--- a/Gemma/Views/Shop/Shop.cshtml
+++ b/Gemma/Views/Shop/Shop.cshtml
@@ -1,5 +1,4 @@
-﻿@*<body class="allcontexter" onscroll="sticky()">*@
-<div class="row-fluid">
+﻿<div class="row-fluid">
 
     <header>
         <h1 class="shoplist-title">
@@ -68,36 +67,6 @@
 
 </div>
 
-@*<div class="container">
-        <div class="row">
-            <ul class="list-inline ">
-                <li class="list-inline-item col-md-3">
-                    <i class="fas fa-box"> SHIPPING</i>
-                    <h3></h3>
-                    <p>佐川急便にて全国一律送料400円でお届けします（一部地域・離島を除く）</p>
-                </li>
-                <li class="list-inline-item col-md-3">
-                    <i class="far fa-hourglass"> RETURN</i>
-                    <h3></h3>
-                    <p>商品到着から7日以内のご購入の商品につきましては返品・交換をお受けしております</p>
-                </li>
-                <li class="list-inline-item col-md-3">
-                    <i class="fas fa-tools"> MAINTENANCE</i>
-                    <h3></h3>
-                    <p>お買い上げいただいた商品を長くご使用いただけるよう修理（有償）を承っております</p>
-                </li>
-                <li class="list-inline-item col-md-3">
-                    <i class="fas fa-redo"> POINTS</i>
-                    <h3></h3>
-                    <p>ご購入金額の1％（1ポイント1円としてご利用可）をポイントとして還元しております</p>
-                </li>
-                <li class="list-inline-item col-md-3"></li>
-            </ul>
-
-        </div>
-    </div>*@
-@*</body>*@
-
 @section topCSS{
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="~/Assets/css/Shop.css" rel="stylesheet" />
@@ -115,14 +84,6 @@
 }
 @section endJS{
     <script src="https://kit.fontawesome.com/f5fcf886aa.js" crossorigin="anonymous"></script>
-
-    @*<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>*@
-
-
     <script>
         $(document).ready();
 
