--- a/Gemma/Views/Shared/_Layout.cshtml
+++ b/Gemma/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Assets/css/FixedMenu.css" rel="stylesheet" />
 
+    <link href="~/Assets/css/NavBarAnimation.css" rel="stylesheet" />
 
     @RenderSection("topCSS", required: false)
     @RenderSection("topJS", required: false)
@@ -25,6 +26,8 @@
     @Scripts.Render("~/bundles/chartjs")
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Assets/js/FixedMenuForIG.js"></script>
+    
+    <script src="~/Assets/js/NavBarAnimation.js"></script>
 
     @RenderSection("scripts", required: false)
     @RenderSection("endCSS", required: false)
