--- a/Gemma/Views/Account/ForgotPassword.cshtml
+++ b/Gemma/Views/Account/ForgotPassword.cshtml
@@ -28,7 +28,7 @@
 
                 <div class="form-group">
                     <div align="center">
-                        <input type="submit" value="パスワード再発行(未實作)" id="Btn_ResetPassword" />
+                        <input type="submit" value="パスワード再発行" id="Btn_ResetPassword" />
                     </div>
                 </div>
             }
