--- a/Gemma/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Gemma/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -3,11 +3,12 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    @*<h1>パスワードの確認を忘れた</h1>*@
 </hgroup>
 <div>
-    <p>
-        請檢查電子郵件以重設密碼。
+    <p style="text-align:center; font-size:20px; margin-top:40px;">
+            <b>メールを確認してパスワードをリセットしてください。</b>
     </p>
+    
 </div>
 	
