--- a/Gemma/Views/Account/ResetPassword.cshtml
+++ b/Gemma/Views/Account/ResetPassword.cshtml
@@ -3,40 +3,114 @@
     ViewBag.Title = "重設密碼";
 }
 
-<h2>@ViewBag.Title.</h2>
+@* 重設密碼 *@
+<h2><b>パスワードをリセット</b></h2>
 
-@using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>重設密碼。</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Code)
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+<div class="container">
+    <div class="row">
+        <div class="col-md-3"></div>
+
+        <div class="col-md-6">
+            @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary("", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Code)
+
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "control-label FontSize" })
+                    <br /><br />
+                    <div>
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control TextBox" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Password, new { @class = "control-label FontSize" })
+                    <br /><br />
+                    <div>
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control TextBox" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label FontSize" })
+                    <br /><br />
+                    <div>
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control TextBox" })
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div align="center">
+                        <input type="submit" id="Btn_ResetPwd" value="パスワードをリセット" />
+                    </div>
+                </div>
+            }
+
+
+
+
         </div>
+
+
+
+        <div class="col-md-3"></div>
+
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="重設" />
-        </div>
-    </div>
+
+</div>
+
+
+@section topCSS {
+    <style>
+        /*標題: 新會員註冊*/
+        h2 {
+            text-align: center;
+            font-size: 50px;
+            margin-bottom: 20px;
+        }
+
+        /*字體大小*/
+        .FontSize {
+            font-size: 13px;
+        }
+
+        /*輸入框 => 長度、輸入框高度、輸入字體大小、背景顏色、邊框*/
+        .TextBox {
+            max-width: 100%;
+            height: 30px;
+            font-size: 13px;
+            background-color: #FFF5EA;
+            border: black 1px solid;
+        }
+
+            /*輸入時，背景的顏色*/
+            .TextBox:focus {
+                background-color: #FFF5EA;
+            }
+
+
+        /*Btn重設密碼*/
+        #Btn_ResetPwd {
+            width: 150px;
+            height: 40px;
+            font-size: 12px;
+            background-color: black;
+            color: white;
+            margin-top:20px;
+        }
+
+    </style>
 }
 
-@section Scripts {
+
+@section endJS{
+    @* 在前端時，就先驗證欄位是否符合 *@
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+
