--- a/Gemma/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Gemma/Views/Account/ResetPasswordConfirmation.cshtml
@@ -2,11 +2,12 @@
     ViewBag.Title = "重設密碼確認";
 }
 
-<hgroup class="title">
+@*<hgroup class="title">
     <h1>@ViewBag.Title.</h1>
-</hgroup>
+</hgroup>*@
 <div>
-    <p>
-        您的密碼已重設。請 @Html.ActionLink("按一下這裡登入", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+    <p style="text-align:center; font-size:20px; margin-top:40px;">
+        <b>パスワードがリセットされました。 @Html.ActionLink("ログインするにはここをクリックしてください", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</b>
+        @* 您的密碼已重設。請 按一下這裡登入 *@
     </p>
 </div>
