--- a/Gemma/Views/Account/ExternalLoginFailure.cshtml
+++ b/Gemma/Views/Account/ExternalLoginFailure.cshtml
@@ -3,6 +3,7 @@
 }
 
 <hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">服務的登入失敗。</h3>
+    @*<h2>@ViewBag.Title.</h2>*@
+    @* 服務的登入失敗。 *@
+    <h2 class="text-danger" style="text-align:center"><b>服务投入失败。</b></h2>
 </hgroup>
