--- a/Gemma/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Gemma/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,11 +1,17 @@
 ﻿@model Gemma.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>使用其他服務進行登入。</h4>
-<hr />
+@* 使用其他服務進行登入。 *@
+@*<div class="form-group">
+    <label class="control-label FontSize">他の服務進行登録を使用します。</label>
+    <hr />
+</div>*@
+
+
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Count() == 0) {
+    if (loginProviders.Count() == 0)
+    {
         <div>
             <p>
                 未設定任何外部驗證服務。如需設定此 ASP.NET 應用程式
@@ -13,13 +19,22 @@
             </p>
         </div>
     }
-    else {
-        using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl })) {
+    else
+    {
+        using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
             @Html.AntiForgeryToken()
-            <div id="socialLoginList">
+
+            <div class="form-group">
+                <label class="control-label FontSize">他の服務進行登録を使用します。</label>
+                <hr />
+            </div>
+
+            <div id="socialLoginList" class="form-group">
                 <p>
-                    @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="使用 @p.Caption 帳戶登入">@p.AuthenticationType</button>
+                    @foreach (AuthenticationDescription p in loginProviders)
+                    {
+                        <button type="submit" class="ExternalLogin" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="使用 @p.Caption 帳戶登入">@p.AuthenticationType</button>
                     }
                 </p>
             </div>
