改外觀和一點bookmark部分

--- a/Gemma/Views/Shared/_NewLoginPartial.cshtml
+++ b/Gemma/Views/Shared/_NewLoginPartial.cshtml
@@ -30,7 +30,10 @@
 
 
             <li class="bookmark">
-                <a href="@Url.Action("Index", "BookMark")"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
+                <a href="@Url.Action("Index", "BookMark")">
+                    <img style="height:120%;width:120%" src="~/Assets/images/Icons/header-icon-bookmark.svg" />
+                </a>
+
             </li>
 
             <li class="cart">
@@ -77,7 +80,8 @@ else
 
 
         <li class="bookmark">
-            <a href="@Url.Action("Index", "BookMark")"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
+            <a href="@Url.Action("Index", "BookMark")">
+<img style="height:120%;width:120%" src="~/Assets/images/Icons/header-icon-bookmark.svg" /></a>
         </li>
 
         <li class="cart">
