--- a/Gemma/Views/Shared/_OnlineStorePicturePartial.cshtml
+++ b/Gemma/Views/Shared/_OnlineStorePicturePartial.cshtml
@@ -12,19 +12,20 @@
     </div>*@
 
 
-<div class="col-4 picturecol"  onclick="location.href='@Url.Action("FindProductById","Details",new { productId = Model.ProductId})'" style="cursor:pointer;">
-    
+<div class="col-4 picturecol" onclick="location.href='@Url.Action("FindProductById","Details",new { productId = Model.ProductId})'" style="cursor:pointer;">
+
     <img src="~/Assets/images/Product/@Model.CategoryName/@Model.ProductName/index1.jpg" alt="" value="@(Model.CategoryName)/@(Model.ProductName)">
 
 
     <div class="position-left heart">
-        <img src="~/Assets/images/Icons/Heart_Mark.png" alt="">
+
+        <img src="~/Assets/images/Icons/header-icon-bookmark.svg" />
 
     </div>
     @for (int i = 0; i < Model.ColorName.Count; i++)
     {
         <div>
-            <img src="~/Assets/images/Product/colors/@Model.ColorName[i]" style="position: absolute;right: @(25+30*i)px;bottom: 30%;width:5%;height:5%;" value="@(Model.CategoryName)/@(Model.ProductName)/@(Model.ColorName[i])" class="hoverchange"/>
+            <img src="~/Assets/images/Product/colors/@Model.ColorName[i]" style="position: absolute;right: @(25+30*i)px;bottom: 20%;width:8%;height:8%;" value="@(Model.CategoryName)/@(Model.ProductName)/@(Model.ColorName[i])" class="hoverchange" />
         </div>
     }
     @*<div class="position-right-1">
@@ -39,15 +40,15 @@
         </div>*@
 
     @*<div class="right-side">
-        <a href="">
-            <img src="~/Assets/images/@Model.Next" alt="">
-        </a>
-    </div>
-    <div class="left-side">
-        <a href="">
-            <img src="~/Assets/images/@Model.Prev" alt="">
-        </a>
-    </div>*@
+            <a href="">
+                <img src="~/Assets/images/@Model.Next" alt="">
+            </a>
+        </div>
+        <div class="left-side">
+            <a href="">
+                <img src="~/Assets/images/@Model.Prev" alt="">
+            </a>
+        </div>*@
     <br />
     <div>
         <div class=" photo-word bottom-side">@Model.ProductName<br>@Model.UnitPrice 円  + TAX</div>
