fix detail heart

--- a/Gemma/Views/Details/_Layout.cshtml
+++ b/Gemma/Views/Details/_Layout.cshtml
@@ -85,7 +85,7 @@
 
 
                                 <li class="bookmark nav-item">
-                                    <a href="@Url.Action("Index", "BookMark")" class="nav-link"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
+                                    <a href="@Url.Action("Index", "BookMark")" class="nav-link"><img style="height:120%;width:120%" src="~/Assets/images/Icons/header-icon-bookmark.svg" /></a>
                                 </li>
 
                                 <li class="cart nav-item">
@@ -114,7 +114,7 @@
 
 
                             <li class="bookmark nav-item">
-                                <a href="@Url.Action("Index", "BookMark")" class="nav-link"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
+                                <a href="@Url.Action("Index", "BookMark")" class="nav-link"><img style="height:120%;width:120%" src="~/Assets/images/Icons/header-icon-bookmark.svg" /></a>
                             </li>
 
                             <li class="cart nav-item">
