speed up onlinestore

--- a/Gemma/Views/OnlineStore/FindBrand.cshtml
+++ b/Gemma/Views/OnlineStore/FindBrand.cshtml
@@ -69,7 +69,7 @@
         <div class="col">
 
             <!--右上大圖片-->
-            <div><img src="https://danigemma.com/images/shop/category/category-all.jpg" class="bigphoto"></div>
+            <div><img src="~/Assets/images/Product/OnlineStore.jpg" class="bigphoto"></div>
             <br />
             <br />
             <div class="p-class">
